<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_check_info"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/check_info" />
        <item
            android:id="@+id/nav_check_company_info"
            android:icon="@drawable/ic_event"
            android:title="@string/modify_company_info" />
        <item
            android:id="@+id/nav_publish_info"
            android:icon="@drawable/ic_headset"
            android:title="@string/publish_info" />
        <item
            android:id="@+id/nav_check_resume"
            android:icon="@drawable/ic_forum"
            android:title="@string/check_resume" />
    </group>

    <item android:title="">
        <menu>
            <item android:title="" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_discuss"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
